Fixed links for all members and text spacing issues

--- a/css/custom.css
+++ b/css/custom.css
@@ -966,8 +966,6 @@ code {
 
 
 .memberName:hover + img[class~="leadPic"] {
-    /* linear-gradient(to top, #D8D8D8, #C32828); */
-
 	-webkit-filter: sepia(1) hue-rotate(300deg) saturate(1.5) brightness(0.75) blur(3px);
 	filter: sepia(1) hue-rotate(300deg) saturate(1.5) brightness(0.75) blur(3px); 
 	-webkit-transition: all 0.3s ease;
@@ -1021,19 +1019,19 @@ code {
     transition: all 0.3s ease;
 } 
 
-.memberLinks {
-	position: absolute;
-    color:white;
-    z-index: 10;
-    opacity: 0;
-    -webkit-transition: all 0.3s ease;
-    -moz-transition: all 0.3s ease;
-    -o-transition: all 0.3s ease;
-    transition: all 0.3s ease;
+.memberLinks a {
+	color: white;
+	margin-top: -5px;
 }
 
-.memberLinks:hover {
-	opacity:1;
+.memberLinks img {
+	width: 40px;
+	height: 40px;
+	opacity: 0;
+}
+.memberLinks:hover + img[class~="memberIcons"]{
+	color: ;
+    opacity: 1;
     -webkit-transition: all 0.3s ease;
     -moz-transition: all 0.3s ease;
     -o-transition: all 0.3s ease;
